# detached-shell

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE_SECURITY_IMPROVEMENTS.md  README.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: buffer_benchmark.rs
scripts/: dev.sh  install.sh
scripts/test/: manual_test.sh  quick_test.sh  test_concurrent.sh  test_final.sh  test_fix.sh  test_nds.sh  test_state.sh  test_status_fix.sh
src/: debug_logger.rs  error.rs  history.rs  history_v2.rs  interactive.rs  lib.rs  main.rs  manager.rs  pty.rs  pty_buffer.rs  pty_handler.rs  scrollback.rs  session.rs  terminal_state.rs  tests.rs
src/handlers/: clients.rs  info.rs  mod.rs  session.rs  test.rs
src/pty/: client.rs  health_monitor.rs  io_handler.rs  io_handler_async.rs  mod.rs  session_switcher.rs  session_switcher_tui.rs  socket.rs  socket_async.rs  spawn.rs  terminal.rs  tests.rs
tests/: integration_test.rs  security_test.rs  session_lifecycle_test.rs
