[package]
name = "detached-shell"
version = "0.1.0"
readme = "README.md"
edition = "2021"
authors = ["Noras <oss@noras.tech>"]
description = "Noras.tech's minimalist detachable shell solution · zero configuration · not a complex multiplexer, just persistent sessions"
repository = "https://github.com/NorasTech/detached-shell"
homepage = "https://github.com/NorasTech/detached-shell"
documentation = "https://docs.rs/detached-shell"
license = "MIT"
keywords = ["terminal", "shell", "session", "detach", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "scripts/test/*",
    ".github/*",
]

[[bin]]
name = "nds"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
